--- a/etc/spaceapi.ini
+++ b/etc/spaceapi.ini
@@ -3,10 +3,12 @@ space = Terminal.21 Basislager
 logo = http://download.terminal21.de/terminal21/logo/logo_beta_schwarz.png
 url = http://www.terminal21.de
 address = Richard-Wagner-Strasse 11, 06114 Halle, Germany
-lon = 51,4987981
-lat = 11,9625053
+lon = 51.4987981
+lat = 11.9625053
 email = kontakt@terminal21.de
 ml = basislager@lists.subsignal.org
+open = http://download.terminal21.de/terminal21/logo/space_open.png
+closed = http://download.terminal21.de/terminal21/logo/space_closed.png
 
 [zeromq]
 publisher = tcp://localhost:9000
