add permanent logging

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -17,5 +17,5 @@ entry-points = spaceapi=spaceapi:run
 
 [supervisor]
 recipe = collective.recipe.supervisor
-programs = 10 spaceapi ${buildout:bin-directory}/spaceapi ${buildout:directory} true
+programs = 10 spaceapi (stdout_logfile=${buildout:directory}/var/log/spaceapi.log stdout_logfile_backups=10 stderr_logfile=${buildout:directory}/var/log/spaceapi.error.log stderr_logfile_backups=10) ${buildout:bin-directory}/spaceapi ${buildout:directory} true
 port = 127.0.0.1:9002
