changed address, added twitter and phone

--- a/etc/spaceapi.ini
+++ b/etc/spaceapi.ini
@@ -2,11 +2,15 @@
 space = Terminal.21 Basislager
 logo = http://download.terminal21.de/terminal21/logo/logo_beta_schwarz.png
 url = http://www.terminal21.de
-address = Richard-Wagner-Strasse 11, 06114 Halle, Germany
-lon = 11.9625053
-lat = 51.4987981
+address = Julius-Ebeling-Straße 9, 06112 Halle, Germany
+lon = 11.985241
+lat = 51.466316
 email = kontakt@terminal21.de
+phone = +49345
+jabber = discuss@conference.terminal21.de
 ml = basislager@lists.subsignal.org
+twitter = @terminal_21
+facebook = Terminal21/119465908244754
 open = http://download.terminal21.de/terminal21/logo/space_open.png
 closed = http://download.terminal21.de/terminal21/logo/space_closed.png
 
