--- a/etc/spaceapi.ini
+++ b/etc/spaceapi.ini
@@ -2,17 +2,15 @@
 space = Terminal.21 Basislager
 logo = http://download.terminal21.de/terminal21/logo/logo_beta_schwarz.png
 url = http://www.terminal21.de
-address = Julius-Ebeling-Straße 9, 06112 Halle, Germany
-lon = 11.985241
-lat = 51.466316
+address = Landsberger Straße 3, 06112 Halle, Germany
+lon = 11.99221
+lat = 51.47996
 email = kontakt@terminal21.de
-phone = +49345
+phone = +49 345 21389509
 jabber = discuss@conference.terminal21.de
 ml = basislager@lists.subsignal.org
 twitter = @terminal_21
 facebook = Terminal21/119465908244754
-open = http://download.terminal21.de/terminal21/logo/space_open.png
-closed = http://download.terminal21.de/terminal21/logo/space_closed.png
-
-[zeromq]
-publisher = tcp://localhost:9000
+open = http://download.terminal21.de/terminal21/logo/api/space_open.jpg
+closed = http://download.terminal21.de/terminal21/logo/api/space_close.jpg
+filename = status.json
